--- a/notebookArboles.ipynb
+++ b/notebookArboles.ipynb
@@ -48,7 +48,8 @@
     "\n",
     "movies_md = pd.read_csv(\"movies_all_data_nosplit.csv\")\n",
     "movies_md = movies_md.fillna(\"\")\n",
-    "tfidf_vectors = np.zeros(shape=(len(movies_md), len(movies_md.columns)), dtype=float)\n",
+    "tfidf_vectors = np.zeros(\n",
+    "    shape=(len(movies_md), len(movies_md.columns)), dtype=float)\n",
     "for indice, fila in movies_md.iterrows():\n",
     "    columna_vectors = []\n",
     "    for valor in fila.values:\n",
@@ -103,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arbol = tree.ExtraTreeRegressor(max_depth=5)\n",
+    "arbol = tree.ExtraTreeRegressor()\n",
     "modelo = arbol.fit(datos_entrenamiento, objetivo_entrenamiento)\n"
    ]
   },
@@ -131,8 +132,7 @@
    "source": [
     "score_entrena = arbol.score(datos_entrenamiento, objetivo_entrenamiento)\n",
     "\n",
-    "print(score_entrena)\n",
-    "\n"
+    "print(score_entrena)\n"
    ]
   },
   {
@@ -271,9 +271,14 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "\n",
+    "print(tree.export_text(modelo,\n",
+    "                       feature_names=[\"overview\",\t\"keywords\", \"cast\", \"genre\"]))\n",
+    "\n",
     "plt.figure(figsize=(12, 6))\n",
-    "tree.plot_tree(modelo)\n",
-    "plt.show()\n"
+    "tree.plot_tree(modelo, feature_names=[\"overview\",\t\"keywords\", \"cast\", \"genre\"])\n",
+    "plt.show()\n",
+    "\n"
    ]
   }
  ],
